WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13915
REGRESSION(
r21682
-
r21742
): editing/inserting/paragraph-separator-* failing pixel test (misspelling markers)
https://bugs.webkit.org/show_bug.cgi?id=13915
Summary
REGRESSION(r21682-r21742): editing/inserting/paragraph-separator-* failing pi...
Justin Garcia
Reported
2007-05-29 18:39:52 PDT
These two tests are failing their pixel test because of incorrect misspelling markers.
Attachments
Add attachment
proposed patch, testcase, etc.
Justin Garcia
Comment 1
2007-05-29 18:44:13 PDT
r21687
looks like a possibility.
Justin Garcia
Comment 2
2007-05-30 17:49:30 PDT
r21908
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug