        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=13915
        REGRESSION(r21687): editing/inserting/paragraph-separator-* failing pixel test (misspelling markers)

        After r21687, SimplifiedBackwardsTextIterator was no longer
        emitting a '\n' as it left the first block of a range ending
        at [block, 0]. So, foo<div>^<br></div> looked like foo^ to
        spell checking (foo wasn't marked as misspelled).

        After r21687, SBTI stopped emitting '\n's in the above case
        because 1) we stopped incorrectly emitting '\n's for nodes as
        we entered them and 2) we were and still are incorrectly calling
        code that should only be called when entering nodes as we leave
        them and 3) we don't call exitNode(), which is responsible
        for emitting the '\n' in the above testcase, when we should.

        Before and after r21687, we'd call exitNode() for a node as
        we traversed in reverse pre-order from its first descendant
        out to its sibling or one of its ancestors' siblings.  We
        weren't calling it a) after we'd enter a node that could
        have children but had none and b) when leaving a container
        that contained the end of the range used to create the iterator.

        * editing/TextIterator.cpp:
        (WebCore::SimplifiedBackwardsTextIterator::SimplifiedBackwardsTextIterator):
        (WebCore::SimplifiedBackwardsTextIterator::advance): Call exitNode() as we
        leave a childless container node and a node where the range ended.
        * editing/TextIterator.h: Track the end of the range used to create
        the SimplifiedBackwardsTextIterator.



Canonical link: https://commits.webkit.org/18274@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21908 268f45cc-cd09-0410-ab3c-d52691b4dbfc